--- a/src/render/assets/css/settings.module.css
+++ b/src/render/assets/css/settings.module.css
@@ -59,3 +59,37 @@
     font-size: 12px;
     line-height: 16px;
 }
+
+
+.zxcBox {
+    background: var(--background-primary);
+    padding: 16px;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    border: 1px solid var(--border-color-1);
+}
+
+.zxcBox .separator {
+    margin: 16px 0 !important;
+}
+.zxcBox > :not(.separator) + button + button {
+    /* margin-top: 8px !important; */
+}
+.zxcBox > :not(.separator) + * {
+    margin-top: 16px !important;
+}
+
+.zxcBox .note {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-between;
+    row-gap: 1em;
+    column-gap: 1em;
+    width: 100%;
+    overflow-x: overlay;
+    overflow-y: hidden;
+}
+.zxcBox .note > span > * {
+    margin-right: 8px;
+}
