--- a/src/render/assets/css/colors.css
+++ b/src/render/assets/css/colors.css
@@ -5,8 +5,8 @@
     --background-primary: #282828;
     --background-secondary: #1d1d1d;
     --background-secondary-alt: #181818;
-    --sbw-background-side: #282828;
-    --sbw-background-main: #1d1d1d;
+    --sbw-background-side: transparent;
+    --sbw-background-main: #282828;
     --interactive-normal: #b9bbbe;
     --interactive-hover: #dcddde;
     --interactive-active: #fff;
