--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -487,7 +487,7 @@ p {
 
 
 .sidebar-region {
-    background-color: var(--sbw-background-side);
+    background-color: var(--background-secondary-alt);
     display: flex;
     flex-direction: row;
     user-select: none;
