--- a/src/render/assets/css/colors.css
+++ b/src/render/assets/css/colors.css
@@ -3,10 +3,10 @@
 :root, .dark-theme {
     --background-tertiary: #121212;
     --background-primary: #282828;
-    --background-secondary: #1d1d1d;
-    --background-secondary-alt: #181818;
+    --background-secondary: #181818;
+    --background-secondary-alt: #121212;
     --sbw-background-side: transparent;
-    --sbw-background-main: #282828;
+    --sbw-background-main: #1d1d1d;
     --interactive-normal: #b9bbbe;
     --interactive-hover: #dcddde;
     --interactive-active: #fff;
