--- a/src/render/assets/css/colors.css
+++ b/src/render/assets/css/colors.css
@@ -3,7 +3,7 @@
 :root, .dark-theme {
     --background-tertiary: #121212;
     --background-primary: #282828;
-    --background-secondary: #181818;
+    --background-secondary: #1f1f1f;
     --background-secondary-alt: #121212;
     --sbw-background-side: #1d1d1d;
     --sbw-background-main: #1d1d1d;
