--- a/src/render/ui/SettingContainer/index.module.css
+++ b/src/render/ui/SettingContainer/index.module.css
@@ -14,7 +14,7 @@
 	pointer-events: none;
 }
 .settingContainer {
-	--inp-background-normal: var(--background-secondary);
+	--inp-background-normal: var(--background-secondary-alt);
 	--inp-background-disabled: var(--background-tertiary);
 }
 
