--- a/src/render/assets/css/colors.css
+++ b/src/render/assets/css/colors.css
@@ -3,10 +3,10 @@
 :root, .dark-theme {
     --background-tertiary: #121212;
     --background-primary: #282828;
-    --background-secondary: #1d1d1d;
-    --background-secondary-alt: #181818;
-    --sbw-background-side: #1d1d1d;
-    --sbw-background-main: #121212;
+    --background-secondary: #181818;
+    --background-secondary-alt: #1d1d1d;
+    --sbw-background-side: #121212;
+    --sbw-background-main: #1d1d1d;
     --interactive-normal: #b9bbbe;
     --interactive-hover: #dcddde;
     --interactive-active: #fff;
@@ -46,7 +46,7 @@
     --background-tertiary: #efeff3;
     --background-primary: #fff;
     --background-secondary: #f2f3f5;
-    --background-secondary-alt: #dbdddf;
+    --background-secondary-alt: #fff;
     --sbw-background-side: #efeff3;
     --sbw-background-main: #fefefe;
     --interactive-normal: #4f5660;
