--- a/src/render/assets/css/colors.css
+++ b/src/render/assets/css/colors.css
@@ -15,7 +15,7 @@
     --background-modifier-selected: rgba(79,84,92,0.32);
     --background-modifier-accent: hsla(0,0%,100%,0.06);
     --border-color-1: rgba(79,84,92,0.18);
-    --background-floating: #18191c;
+    --background-floating: #1d1d1d;
     --header-primary: #fff;
     --header-secondary: #b9bbbe;
     --text-link: #00b0f4;
