--- a/src/render/assets/css/colors.css
+++ b/src/render/assets/css/colors.css
@@ -4,16 +4,16 @@
     --background-tertiary: #121212;
     --background-primary: #282828;
     --background-secondary: #181818;
-    --background-secondary-alt: #1d1d1d;
+    --background-secondary-alt: #1a1a1a;
     --sbw-background-side: #121212;
     --sbw-background-main: #1d1d1d;
     --interactive-normal: #b9bbbe;
     --interactive-hover: #dcddde;
     --interactive-active: #fff;
-    --background-modifier-hover: rgba(79,84,92,0.26);
+    --background-modifier-hover: rgba(11,12,13,0.26);
     --background-modifier-active: rgba(79,84,92,0.24);
-    --background-modifier-selected: rgba(79,84,92,0.32);
-    --background-modifier-accent: hsla(0,0%,100%,0.06);
+    --background-modifier-selected: rgba(11,12,13,0.42);
+    --background-modifier-accent: hsla(0,0%,50%,0.06);
     --border-color-1: rgba(79,84,92,0.18);
     --background-floating: #1d1d1d;
     --header-primary: #fff;
