--- a/src/render/assets/css/fonts.css
+++ b/src/render/assets/css/fonts.css
@@ -1,3 +1,6 @@
+@import url(https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700;800&display=swap);
+
 @font-face {
   font-family: 'Minecraft Rus';
   src: url('minecraftia.ttf') format("ttf");
