--- a/src/render/ui/Transition/Transition.css
+++ b/src/render/ui/Transition/Transition.css
@@ -13,24 +13,51 @@
   opacity: 0;
   pointer-events: none;
   overflow: hidden;
+  transition: all 0.25s linear;
+}
+
+.TransitionWrap > *.Transition-push {
   transition: all 0.25s cubic-bezier(.65,-0.3,0.3,1.3);
 }
-.TransitionWrap > *.open {
-  opacity: 1;
-  transform: translateZ(0px);
-  pointer-events: all;
-}
-.TransitionWrap > *:first-child {
+.TransitionWrap > *.Transition-push:first-child {
   z-index: 12;
 }
-.TransitionWrap > *:last-child {
+.TransitionWrap > *.Transition-push:last-child {
   z-index: 11;
 }
-.TransitionWrap > *:not(.open):first-child {
-  transform: scale(1.1) translateZ(0px);
+.TransitionWrap > *.Transition-push.open {
+  opacity: 1;
+  transform: translateZ(0);
+  pointer-events: all;
+}
+.TransitionWrap > *.Transition-push:not(.open):first-child {
+  transform: scale(1.1) translateZ(0);
   opacity: 0;
 }
-.TransitionWrap > *:not(.open):last-child {
-  transform: scale(0.9) translateZ(0px);
+.TransitionWrap > *.Transition-push:not(.open):last-child {
+  transform: scale(0.9) translateZ(0);
+  opacity: 0;
+}
+
+.TransitionWrap > *.Transition-slide {
+  transition: all 0.25s ease-in-out;
+}
+.TransitionWrap > *.Transition-slide:first-child {
+  z-index: 12;
+}
+.TransitionWrap > *.Transition-slide:last-child {
+  z-index: 11;
+}
+.TransitionWrap > *.Transition-slide.open {
+  opacity: 1;
+  transform: translateX(0);
+  pointer-events: all;
+}
+.TransitionWrap > *.Transition-slide:not(.open):first-child {
+  transform: translateX(100%);
+  opacity: 0;
+}
+.TransitionWrap > *.Transition-slide:not(.open):last-child {
+  transform: translateX(-100%);
   opacity: 0;
 }
