--- a/src/render/ui/Transition/Transition.css
+++ b/src/render/ui/Transition/Transition.css
@@ -50,20 +50,31 @@
 }
 .TransitionWrap > *.Transition-slide.open {
   opacity: 1;
-  transform: translateX(0);
+  visibility: visible;
+  transform: none;
+  -webkit-transform: none;
   pointer-events: all;
 }
 .TransitionWrap > *.Transition-slide:not(.open):first-child {
   transform: translateX(100%);
+  visibility: hidden;
   opacity: 0;
 }
 .TransitionWrap > *.Transition-slide:not(.open):last-child {
   transform: translateX(-100%);
+  visibility: hidden;
   opacity: 0;
+}
+.TransitionWrap > *.Transition-slide.rev:not(.open):first-child {
+  transform: translateX(-100%);
+}
+.TransitionWrap > *.Transition-slide.rev:not(.open):last-child {
+  transform: translateX(100%);
 }
 
 .TransitionWrap > *.Transition-slide-v {
-  transition: all 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
+  transition-delay: 1ms;
 }
 .TransitionWrap > *.Transition-slide-v:first-child {
   z-index: 12;
@@ -74,16 +85,23 @@
 .TransitionWrap > *.Transition-slide-v.open {
   opacity: 1;
   visibility: visible;
-  transform: translateY(0);
+  transform: none;
+  -webkit-transform: none;
   pointer-events: all;
 }
 .TransitionWrap > *.Transition-slide-v:not(.open):first-child {
-  transform: translateY(100%);
-  opacity: 0;
-  visibility: hidden;
-}
-.TransitionWrap > *.Transition-slide-v:not(.open):last-child {
   transform: translateY(-100%);
   visibility: hidden;
   opacity: 0;
+}
+.TransitionWrap > *.Transition-slide-v:not(.open):last-child {
+  transform: translateY(100%);
+  visibility: hidden;
+  opacity: 0;
+}
+.TransitionWrap > *.Transition-slide-v.rev:not(.open):first-child {
+  transform: translateY(100%);
+}
+.TransitionWrap > *.Transition-slide-v.rev:not(.open):last-child {
+  transform: translateY(-100%);
 }
