--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -943,6 +943,7 @@ body {
     font-size: 1rem;
     font-weight: 600;
     padding: 0 8px;
+    color: inherit;
 }
 .r-box .header-w > span.search {
     position: relative;
