--- a/src/render/ui/Transition/Transition.css
+++ b/src/render/ui/Transition/Transition.css
@@ -17,7 +17,7 @@
 }
 
 .TransitionWrap > *.Transition-push {
-  transition: all 0.25s cubic-bezier(.65,-0.3,0.3,1.3);
+  transition: all .25s cubic-bezier(.65,-0.3,0.3,1.3);
 }
 .TransitionWrap > *.Transition-push:first-child {
   z-index: 12;
@@ -41,7 +41,7 @@
 
 .TransitionWrap > *.Transition-slide,
 .TransitionWrap > *.Transition-slide-v {
-  transition: .25s cubic-bezier(0.25, 1, 0.5, 1);
+  transition: .25s cubic-bezier(0.33, 1, 0.68, 1);
 }
 .TransitionWrap > *.Transition-slide:first-child {
   z-index: 12;
@@ -57,20 +57,20 @@
   pointer-events: all;
 }
 .TransitionWrap > *.Transition-slide:not(.open):first-child {
-  transform: translateX(100%);
+  transform: translateX(-100%);
   visibility: hidden;
   opacity: 0;
 }
 .TransitionWrap > *.Transition-slide:not(.open):last-child {
-  transform: translateX(-100%);
+  transform: translateX(100%);
   visibility: hidden;
   opacity: 0;
 }
 .TransitionWrap > *.Transition-slide.rev:not(.open):first-child {
-  transform: translateX(-100%);
+  transform: translateX(100%);
 }
 .TransitionWrap > *.Transition-slide.rev:not(.open):last-child {
-  transform: translateX(100%);
+  transform: translateX(-100%);
 }
 
 .TransitionWrap > *.Transition-slide-v:first-child {
