--- a/src/render/ui/Transition/Transition.css
+++ b/src/render/ui/Transition/Transition.css
@@ -16,45 +16,46 @@
   transition: all 0.25s linear;
 }
 
+.TransitionWrap > *.Transition-push.open,
+.TransitionWrap > *.Transition-slide.open,
+.TransitionWrap > *.Transition-slide-v.open {
+  opacity: 1;
+  visibility: visible;
+  transform: none;
+  -webkit-transform: none;
+  pointer-events: all;
+}
+
 .TransitionWrap > *.Transition-push {
   transition: all .25s cubic-bezier(.65,-0.3,0.3,1.3);
 }
+.TransitionWrap > *.Transition-slide,
+.TransitionWrap > *.Transition-slide-v {
+  transition: .25s cubic-bezier(0.33, 1, 0.68, 1);
+}
+
 .TransitionWrap > *.Transition-push:first-child {
   z-index: 12;
 }
 .TransitionWrap > *.Transition-push:last-child {
   z-index: 11;
 }
-.TransitionWrap > *.Transition-push.open {
-  opacity: 1;
-  transform: translateZ(0);
-  pointer-events: all;
-}
 .TransitionWrap > *.Transition-push:not(.open):first-child {
   transform: scale(1.1) translateZ(0);
+  visibility: hidden;
   opacity: 0;
 }
 .TransitionWrap > *.Transition-push:not(.open):last-child {
   transform: scale(0.9) translateZ(0);
+  visibility: hidden;
   opacity: 0;
 }
 
-.TransitionWrap > *.Transition-slide,
-.TransitionWrap > *.Transition-slide-v {
-  transition: .25s cubic-bezier(0.33, 1, 0.68, 1);
-}
 .TransitionWrap > *.Transition-slide:first-child {
   z-index: 12;
 }
 .TransitionWrap > *.Transition-slide:last-child {
   z-index: 11;
-}
-.TransitionWrap > *.Transition-slide.open {
-  opacity: 1;
-  visibility: visible;
-  transform: none;
-  -webkit-transform: none;
-  pointer-events: all;
 }
 .TransitionWrap > *.Transition-slide:not(.open):first-child {
   transform: translateX(-100%);
@@ -78,13 +79,6 @@
 }
 .TransitionWrap > *.Transition-slide-v:last-child {
   z-index: 11;
-}
-.TransitionWrap > *.Transition-slide-v.open {
-  opacity: 1;
-  visibility: visible;
-  transform: none;
-  -webkit-transform: none;
-  pointer-events: all;
 }
 .TransitionWrap > *.Transition-slide-v:not(.open):first-child {
   transform: translateY(-100%);
