--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -227,10 +227,11 @@ button {
     box-sizing: border-box;
 }
 
-[role="button"] {
+[role="button"], button {
     position: relative;
 }
-[role="button"]:focus::before {
+[role="button"]:focus::before,
+button:focus::before {
     position: absolute;
     z-index: 1;
     top: calc(-1px - 3px);
@@ -835,7 +836,7 @@ body {
     position: relative;
     width: auto;
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
     display: flex;
     flex-direction: row;
     flex-shrink: 0;
