--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -230,8 +230,8 @@ button {
 [role="button"], button {
     position: relative;
 }
-[role="button"]:focus::before,
-button:focus::before {
+[role="button"]:focus:focus-visible::before,
+button:focus:focus-visible::before {
     position: absolute;
     z-index: 1;
     top: calc(-1px - 3px);
