Fix focus trap on screens

--- a/src/render/ui/Transition/Transition.css
+++ b/src/render/ui/Transition/Transition.css
@@ -14,6 +14,10 @@
   pointer-events: none;
   overflow: hidden;
   transition: all 0.25s linear;
+  visibility: hidden;
+}
+.TransitionWrap > *:not(.shown) {
+  display: none;
 }
 
 .TransitionWrap > *.Transition-push.open,
