--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -227,11 +227,13 @@ button {
     box-sizing: border-box;
 }
 
-[role="button"], button {
+[role="button"], button, [role="tab"] {
     position: relative;
 }
 [role="button"]:focus:focus-visible::before,
-button:focus:focus-visible::before {
+button:focus:focus-visible::before ,
+[role="tab"]:focus:focus-visible::before
+{
     position: absolute;
     z-index: 1;
     top: calc(-1px - 3px);
