--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -753,17 +753,19 @@ body {
     z-index: 1;
 }
 
-.app-container:not(.open) {
-    transform: scale(0.93) translateZ(0px);
-    opacity: 0;
+:root.platform-win .preloader,
+:root.platform-linux .preloader {
+    top: -22px;
 }
-
 
 :root.fullscreen .preloader {
     top: 0;
 }
 
-
+:root.platform-win .frame-fix,
+:root.platform-linux .frame-fix {
+    top: 22px;
+}
 :root.fullscreen .frame-fix {
     top: 0;
 }
@@ -2044,10 +2046,6 @@ a:hover {
 }
 .categoryItem.selected .innerItem{
     background: var(--background-modifier-selected);
-}
-.categoryItem h2 {
-    line-height: 1;
-    text-transform: uppercase;
 }
 .categoryItem h2 {
     line-height: 1;
