--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -1101,6 +1101,7 @@ body {
 .main-content > .top {
     width: 100%;
     height: 100%;
+    max-height: 350px;
     position: relative;
     overflow: hidden;
     color: #f1f1f1;
